--- a/index.html
+++ b/index.html
@@ -1,47 +1,54 @@
 <!DOCTYPE html>
+<!-- This html just lets the website know what type of file and which language it is reading -->
 <html lang="en-us">
 
+<!-- The head element is used for headings and also in this case refrences the style of text the website will have with the css and the type of coding it is -->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>A website from Horiseon for better use of the search engine for your buisness using SEO, online reputation, and Social Media marketing</title>
 </head>
 
+<!-- The body tag is all the meat of the website anything thats not a header or a footer is in the body. -->
 <body>
+    <!-- The div is the division it better spaces things out for easier organizatin. Pretty much seeing what parts go where -->
     <div class="header">
+        <!-- h1 is header 1 its what a lot of search engines look at they look at the header and the headings and h1 would be the first one they look at. -->
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+            <!-- This is the Navigation sematic used when the website has navigation tools  -->
+            <nav>
+                <!-- This is unordered list just showing there is going to be a list segment -->
+                <ul>
+                    <!-- This is the listed items in the unordered listing parent -->
+                    <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                    <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                    <li><a href="#social-media-marketing">Social Media Marketing</a></li> 
+                </ul>
+            </nav>
         </div>
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <!-- Fixed the bug of search engine not working by adding the correct id -->
+        <div id="search-engine-optimization" class="Headers" >
+            <!-- this img tag means there will be an image appearing -->
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A workspace including a notebook reading seo: content, headings, mobile capability, social media, link building, and backlink" />
             <h2>Search Engine Optimization</h2>
+            <!-- this p shows there will be a paragraph segment -->
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <div id="online-reputation-management" class="Headers">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A man looking at his laptop ans seeing a bar graph and pie charts indicating their Reputation going up" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <div id="social-media-marketing" class="Headers">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A team of 6 individuals in a meeting dicussing how to better use social media" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -49,34 +56,32 @@
         </div>
     </div>
     <div class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-h3">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
+            <img src="./assets/images/lead-generation.png" alt="A cog or system leading to money" />
+            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
+            
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-h3">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
+            <img src="./assets/images/brand-awareness.png" alt="A lightbulb wearing a suit" />
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
+            
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-h3">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
+            <img src="./assets/images/cost-management.png" alt="A cog with money around it" />
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </div>
     </div>
+</body>
+<!-- A footer is used for anything at the bottom of your website usually either a contact list or the copyrights -->
+<footer>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
-</body>
-
+</footer>
 </html>
